src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: "Inter", sans-serif;
  height: 100dvh;
}

#root {
  height: 100%;
}

h1 {
  @apply text-3xl font-bold;
}

h2 {
  @apply text-2xl font-bold;
}

h3 {
  @apply text-xl font-bold;
}

h4 {
  @apply text-lg font-bold;
}

h5 {
  @apply text-base font-bold;
}

h6 {
  @apply text-sm font-bold;
}
button {
  @apply rounded-full px-5 py-2;
}

.page-x-padding {
  @apply px-8;
}

.page-y-padding {
  @apply py-6;
}

.page-padding {
  @apply px-8 py-6;
}

.page-colors {
  @apply bg-light dark:bg-dark text-dark dark:text-light;
}

